--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,17 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "from httpx import get"
+    "from httpx import get\n",
+    "from playwrightnb import url2md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def nbclassic_server(): return read_gist('Isaac-Flath','7361506a442d895ba1127ef68b0e2e36/raw')"
+    "def nbclassic_server(): return url2md('https://nbclassic.readthedocs.io/en/latest/nbclassic.html','.bd-article')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def docker(): \n",
+    "    urls = {'Dockerfile':'https://docs.docker.com/reference/dockerfile/',\n",
+    "            'Composefile':'https://docs.docker.com/reference/compose-file/',\n",
+    "            'docker_cli':'https://docs.docker.com/reference/cli/docker/',\n",
+    "            'compose_cli':'https://docs.docker.com/reference/cli/docker/compose/',\n",
+    "            'daemon':'https://docs.docker.com/reference/cli/dockerd/',\n",
+    "            'dockerghub':'https://docs.docker.com/reference/api/hub/latest/'}\n",
+    "    return {k:url2md(v,'.prose') for k,v in urls.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def fastcore():\n",
+    "    urls = {'llms':'https://fastcore.fast.ai/llms-ctx.txt',\n",
+    "            'llms-ctx':'https://fastcore.fast.ai/llms-ctx.txt',\n",
+    "            'llms-ctx-full': 'https://fastcore.fast.ai/llms-ctx-full.txt'}\n",
+    "    return {k:get(v).text for k,v in urls.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "def claudette():\n",
-    "    urls = ['https://docs.fastht.ml/index.html.md',\n",
-    "           'https://claudette.answer.ai/async.html.md',\n",
+    "    urls = ['https://claudette.answer.ai/async.html.md',\n",
     "           'https://claudette.answer.ai/core.html.md',\n",
     "           'https://claudette.answer.ai/toolloop.html.md',\n",
     "           'https://claudette.answer.ai/async.html.md']\n",
@@ -86,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +152,34 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
