--- a/_proc/00_core.ipynb
+++ b/_proc/00_core.ipynb
@@ -31,7 +31,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L12){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L13){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### read_gist\n",
        "\n",
@@ -40,7 +40,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L12){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L13){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### read_gist\n",
        "\n",
@@ -69,7 +69,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L15){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### nbclassic_server\n",
        "\n",
@@ -78,7 +78,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L15){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### nbclassic_server\n",
        "\n",
@@ -107,20 +107,20 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L18){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L19){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
-       "### fasthtml\n",
+       "### docker\n",
        "\n",
-       ">      fasthtml ()"
+       ">      docker ()"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L18){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L19){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
-       "### fasthtml\n",
+       "### docker\n",
        "\n",
-       ">      fasthtml ()"
+       ">      docker ()"
       ]
      },
      "execution_count": 3,
@@ -131,7 +131,7 @@
    "source": [
     "#| echo: false\n",
     "#| output: asis\n",
-    "show_doc(fasthtml)"
+    "show_doc(docker)"
    ]
   },
   {
@@ -145,20 +145,20 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L21){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L29){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
-       "### claudette\n",
+       "### fasthtml\n",
        "\n",
-       ">      claudette ()"
+       ">      fasthtml ()"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L21){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L29){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
-       "### claudette\n",
+       "### fasthtml\n",
        "\n",
-       ">      claudette ()"
+       ">      fasthtml ()"
       ]
      },
      "execution_count": 4,
@@ -169,7 +169,7 @@
    "source": [
     "#| echo: false\n",
     "#| output: asis\n",
-    "show_doc(claudette)"
+    "show_doc(fasthtml)"
    ]
   },
   {
@@ -183,7 +183,83 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L30){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L32){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### fastcore\n",
+       "\n",
+       ">      fastcore ()"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L32){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### fastcore\n",
+       "\n",
+       ">      fastcore ()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| echo: false\n",
+    "#| output: asis\n",
+    "show_doc(fastcore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "has_sd": true,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L39){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### claudette\n",
+       "\n",
+       ">      claudette ()"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L39){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### claudette\n",
+       "\n",
+       ">      claudette ()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| echo: false\n",
+    "#| output: asis\n",
+    "show_doc(claudette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "has_sd": true,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L47){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### discord\n",
        "\n",
@@ -192,14 +268,14 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L30){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/core.py#L47){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### discord\n",
        "\n",
        ">      discord ()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
