--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from ContextKit.core import *"
+    "import ContextKit.core as ck\n",
+    "from fastcore.foundation import AttrDict"
    ]
   },
   {
@@ -60,6 +61,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1 item ex (Nbclassic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ai reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nbclassic_server_docs = ck.nbclassic_server()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%ai 0\n",
+    "\n",
+    "Read $`nbclassic_server_docs` and give me a short summary of what is in it.  End with 'Loaded into Context' in a new paragraph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The nbclassic_server_docs contain information about the Jupyter NbClassic package, which implements the classic Jupyter Notebook 6 as a Jupyter Server extension. It covers installation, configuration, usage options, development details, and the timeline for supporting nbclassic during the transition to Jupyter Notebook 7. The document also mentions the compatibility issues between Notebook 6 and 7, and the need for nbclassic to support users during this transition period.\n",
+    "\n",
+    "Loaded into Context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fastcore (multiple, but only want 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ai reset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -67,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "'# Running a Jupyter Server with NbClassic#\\n\\nThe Jupyter NbClassic web application is based on a server-client structure. Jupyter server uses a two-process kernel architecture based on ZeroMQ, as well '"
+       "dict_keys(['llms', 'llms-ctx', 'llms-ctx-full'])"
       ]
      },
      "execution_count": null,
@@ -76,7 +138,52 @@
     }
    ],
    "source": [
-    "nbclassic_server()[:200]"
+    "ck.fastcore().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_ctx = ck.fastcore()['llms-ctx-full']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%ai 0\n",
+    "\n",
+    "Read $`fc_ctx` and give me a short summary of what is in it.  End with 'Loaded into Context' in a new paragraph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fc_ctx contains comprehensive documentation for the fastcore library, which is part of the fast.ai ecosystem. It includes detailed explanations and examples for various modules such as basics, foundation, dispatch, meta, parallel, script, xtras, and more. The documentation covers utility functions, classes, decorators, and tools for tasks like type dispatch, attribute delegation, metaprogramming, parallel processing, CLI creation, and XML generation. It also includes information on testing utilities and extensions to Python's standard library.\n",
+    "\n",
+    "Loaded into Context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Discord (multiple and want multiple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ai reset"
    ]
   },
   {
@@ -96,7 +203,8 @@
     }
    ],
    "source": [
-    "discord().keys()"
+    "discord = AttrDict(ck.discord())\n",
+    "discord.keys()"
    ]
   },
   {
@@ -116,7 +224,7 @@
     }
    ],
    "source": [
-    "discord()['app'][:200]"
+    "discord.app[:200]"
    ]
   },
   {
@@ -124,7 +232,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user, oauth = discord.user, discord.oauth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%ai 0\n",
+    "Explain the difference between what's in $`user` vs $`oauth`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `user` variable contains information about developing a user-installable Discord app, including details on setting up the project, creating commands, handling interactions, and using metadata.\n",
+    "\n",
+    "The `oauth` variable contains information about Discord's OAuth2 implementation, including different authorization flows, scopes, token handling, and API endpoints related to OAuth2 authentication."
+   ]
   }
  ],
  "metadata": {
