--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -61,6 +61,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [],
+   "source": [
+    "import ContextKit.core as ck"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
