--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -61,6 +61,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ContextKit.core as ck"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
