--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -140,31 +140,9 @@
    "metadata": {
     "language": "python"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['llms', 'llms-ctx', 'llms-ctx-full'])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ck.fastcore().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "language": "python"
-   },
    "outputs": [],
    "source": [
-    "fc_ctx = ck.fastcore()['llms-ctx-full']"
+    "fc_ctx = ck.fastcore()"
    ]
   },
   {
