--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -36,7 +36,8 @@
    "source": [
     "#| export\n",
     "from httpx import get\n",
-    "from playwrightnb import url2md"
+    "from playwrightnb import url2md\n",
+    "from toolslm.download import find_docs, read_docs"
    ]
   },
   {
@@ -83,7 +84,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fasthtml():return get('https://docs.fastht.ml/llms-ctx.txt').text"
+    "def fasthtml():return read_docs('https://docs.fastht.ml')"
    ]
   },
   {
@@ -93,11 +94,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fastcore():\n",
-    "    urls = {'llms':'https://fastcore.fast.ai/llms-ctx.txt',\n",
-    "            'llms-ctx':'https://fastcore.fast.ai/llms-ctx.txt',\n",
-    "            'llms-ctx-full': 'https://fastcore.fast.ai/llms-ctx-full.txt'}\n",
-    "    return {k:get(v).text for k,v in urls.items()}"
+    "def fastcore(): return read_docs('https://fastcore.fast.ai/')"
    ]
   },
   {
