--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -134,29 +134,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['llms', 'llms-ctx', 'llms-ctx-full'])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ck.fastcore().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "fc_ctx = ck.fastcore()['llms-ctx-full']"
+    "fc_ctx = ck.fastcore()"
    ]
   },
   {
