add new contexts

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -30,29 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "from httpx import get\n",
     "from playwrightnb import url2md\n",
-    "from toolslm.download import find_docs, read_docs"
+    "from functools import partial\n",
+    "from toolslm.download import find_docs, read_docs\n",
+    "from fastcore.all import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gist(user,s): return get(f'https://gist.githubusercontent.com/{user}/{s}').text"
+    "def read_gist(s, user): return get(f'https://gist.githubusercontent.com/{user}/{s}').text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,19 +64,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minai():\n",
+    "    framework = 'f242de7c00ace2db18771f9999a2d2fa/raw/73d6367f74d6678b1d1752332e86f110f5dded57'\n",
+    "    course_nbs = 'a9ac18696ccc8379b7b0a4e0847826cf/raw/77b31753f879e2b9769e1630fad76a4c3936d6da'\n",
+    "    course_summary = '08684d1aa641ee0686d7b620e66de24c/raw/9290a38676def861aa6fdb7917d6793b3dd67ccd'\n",
+    "    _fn = bind(read_gist,user='isaac-flath')\n",
+    "    return list(map(_fn,(framework,course_nbs,course_summary)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def docker():\n",
+    "    urls = [\n",
+    "        'https://docs.docker.com/reference/dockerfile/',\n",
+    "        'https://docs.docker.com/reference/compose-file/',\n",
+    "        'https://docs.docker.com/reference/cli/docker/',\n",
+    "        'https://docs.docker.com/reference/cli/docker/compose/',\n",
+    "        'https://docs.docker.com/reference/cli/dockerd/',\n",
+    "        'https://docs.docker.com/reference/api/hub/latest/']\n",
+    "    return tuple(map(lambda url: url2md(url, '.prose'), urls))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fastlite_sqlutils():\n",
+    "    fastlite_kw = get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/kw.py')\n",
+    "    fastlite_core = get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/core.py')\n",
+    "    fastlite_docs = read_docs('https://answerdotai.github.io/fastlite/')\n",
+    "    sqlite_utils_docs = url2md('https://sqlite-utils.datasette.io/en/stable/python-api.html','#sqlite-utils-python-library')\n",
+    "    return fastlite_kw, fastlite_core, fastlite_docs, sqlite_utils_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def docker(): \n",
-    "    urls = {'Dockerfile':'https://docs.docker.com/reference/dockerfile/',\n",
-    "            'Composefile':'https://docs.docker.com/reference/compose-file/',\n",
-    "            'docker_cli':'https://docs.docker.com/reference/cli/docker/',\n",
-    "            'compose_cli':'https://docs.docker.com/reference/cli/docker/compose/',\n",
-    "            'daemon':'https://docs.docker.com/reference/cli/dockerd/',\n",
-    "            'dockerghub':'https://docs.docker.com/reference/api/hub/latest/'}\n",
-    "    return {k:url2md(v,'.prose') for k,v in urls.items()}"
+    "def fasthtml():\n",
+    "    hypermedia_summary = read_gist('d5dc25001d70f5ceb20d115f586662d6/raw/80e427ace28dfc8a576617c5903cc2e12496ba4f','isaac-flath')\n",
+    "    return read_docs('https://docs.fastht.ml'),hypermedia_summary"
    ]
   },
   {
@@ -84,22 +126,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fasthtml():return read_docs('https://docs.fastht.ml')"
+    "def fastcore(): \n",
+    "    return read_docs('https://fastcore.fast.ai/'), "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def fastcore(): return read_docs('https://fastcore.fast.ai/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,29 +142,12 @@
     "           'https://claudette.answer.ai/core.html.md',\n",
     "           'https://claudette.answer.ai/toolloop.html.md',\n",
     "           'https://claudette.answer.ai/async.html.md']\n",
-    "    return {url.split('/')[-1].split('.')[0]: get(url).text for url in urls}        "
+    "    return [get(url).text for url in urls]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def discord():\n",
-    "    gists = {\n",
-    "        'app': '97e08aa4c97129d942ceaf44ee37238a/raw/de856c4390afc7ea2302c6c89de3bf30756528c9/discord-app-cmd.md',\n",
-    "        'oauth': 'd9bf85f7862c2c0108df392244b9e1c4/raw/448e4403569cfbf62b617fce24c1a7c04435e82f/discord-oauth.md',\n",
-    "        'user': '2a3c75353356242c6809a29b9e8b68ca/raw/108ad0a93ac1a18b91f685f9b9445952b1bd5935/discord-app-user.md',\n",
-    "        'interact': 'a294f7de6834302c6bda6c5308223e9d/raw/53abc463fadd4ef8742be88902c96dd3c0c9522b/discord-interact.md'\n",
-    "    }\n",
-    "    return {k: read_gist('jph00',v) for k, v in gists.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +165,34 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
