--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def minai():\n",
     "    framework = 'f242de7c00ace2db18771f9999a2d2fa/raw/73d6367f74d6678b1d1752332e86f110f5dded57'\n",
     "    course_nbs = 'a9ac18696ccc8379b7b0a4e0847826cf/raw/77b31753f879e2b9769e1630fad76a4c3936d6da'\n",
@@ -78,10 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def docker():\n",
     "    urls = [\n",
     "        'https://docs.docker.com/reference/dockerfile/',\n",
@@ -95,10 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def fastlite_sqlutils():\n",
     "    fastlite_kw = get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/kw.py')\n",
     "    fastlite_core = get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/core.py')\n",
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
